--- a/service/utility/defaults/main.yml
+++ b/service/utility/defaults/main.yml
@@ -14,4 +14,4 @@ utility_task_list:
 
 utility_startup_dest: '{{ user_config }}/autostart'
 
-utility_aliases_dest: '.aliases.sh'
+utility_aliases: '.aliases.sh'
