change sync directory

--- a/hosts.yml
+++ b/hosts.yml
@@ -10,7 +10,7 @@ local:
     user_storage: '{{ user_home }}/storage'
     dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
-    sync_directory: '{{ user_home }}/sync'
+    sync_directory: '{{ user_storage }}/sync'
     ubuntu_codename: 'bionic'
     git_protocol: 'git@github.com:in-in/dotfiles.git'
     storage_ext_id: '12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
