--- a/service/utility/tasks/template.yml
+++ b/service/utility/tasks/template.yml
@@ -18,4 +18,12 @@
   template:
     src: '{{ item.path }}/{{ item.filename }}.j2'
     dest: '{{ item.dest }}/{{ item.filename }}'
+    lstrip_blocks: yes
+    backup: yes
+  vars:
+    data: '{{
+      hostvars[inventory_hostname]
+      ["global_config_" + item.path.split("/")[-2]]
+      [item.data | default(None)] | default(None)
+      }}'
   loop: '{{ flat_utility_template }}'
