refactor utility tasks for simplicity & reasonably variable name

--- a/roles/git/defaults/main.yml
+++ b/roles/git/defaults/main.yml
@@ -7,7 +7,7 @@ utility_package:
     install:
       - 'git'
 
-vault_git_config_data:
+git_config_data:
   - name: user.email
     value: '{{ git_user_email }}'
   - name: user.name
