--- a/roles/optimization/tasks/main.yml
+++ b/roles/optimization/tasks/main.yml
@@ -6,4 +6,4 @@
     path: '/etc/xdg/autostart/{{ item }}'
     line: 'X-GNOME-Autostart-enabled=false'
     backup: yes
-  loop: '{{ autostart_entry_list }}'
+  loop: '{{ optimization_autostart_entry_list }}'
