--- a/roles/vscode/files/Code/User/settings.json
+++ b/roles/vscode/files/Code/User/settings.json
@@ -22,6 +22,7 @@
   "editor.tabSize": 2,
   "editor.wordWrap": "on",
   "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
   "extensions.autoUpdate": false,
   "extensions.ignoreRecommendations": true,
   "extensions.showRecommendationsOnlyOnDemand": true,
