nemo: add new settings

--- a/roles/nemo/defaults/main.yml
+++ b/roles/nemo/defaults/main.yml
@@ -27,8 +27,16 @@ nemo_settings:
     value: 'false'
   - key: '/org/nemo/preferences/show-edit-icon-toolbar'
     value: 'false'
+  - key: '/org/nemo/window-state/devices-expanded'
+    value: 'false'
+  - key: '/org/nemo/window-state/network-expanded'
+    value: 'false'
   - key: '/org/nemo/window-state/start-with-menu-bar'
     value: 'false'
+  - key: '/org/nemo/window-state/sidebar-bookmark-breakpoint'
+    value: '15'
+  - key: '/org/nemo/window-state/sidebar-width'
+    value: '165'
   - key: '/org/nemo/preferences/show-open-in-terminal-toolbar'
     value: 'true'
   - key: '/org/nemo/preferences/show-hidden-files'
