fix settings for nemo and cmus & update storage_ext var

--- a/roles/nemo/defaults/main.yml
+++ b/roles/nemo/defaults/main.yml
@@ -13,6 +13,7 @@ nemo_bookmarks:
   - '{{ user_storage }}/laptop'
   - '{{ user_storage }}/sync'
   - '{{ user_storage }}/video'
+  - '{{ storage_ext }}'
 
 nemo_settings:
   - key: '/org/nemo/desktop/computer-icon-visible'
