--- a/hosts.yml
+++ b/hosts.yml
@@ -14,4 +14,5 @@ local:
     ubuntu_codename: 'bionic'
     git_protocol: 'git@github.com:in-in/dotfiles.git'
     storage_ext_id: '12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
+    storage_ext: '{{ user_home }}/storage_ext'
     chapter27: '/media/{{ ansible_user_id }}/chapter27'
