--- a/roles/filesystem/defaults/main.yml
+++ b/roles/filesystem/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 utility_link:
   - src: '/media/{{ ansible_user_id }}/{{ storage_ext_id }}'
-    dest: '{{ user_home }}/storage_ext'
+    dest: '{{ storage_ext }}'
   - src: '{{ chapter27 }}'
     dest: '{{ user_storage }}'
 
