add useful directories to storage disk

--- a/roles/filesystem/defaults/main.yml
+++ b/roles/filesystem/defaults/main.yml
@@ -8,3 +8,10 @@ utility_link:
 filesystem_device_list:
   - '/dev/sda3'
   - '/dev/sdb1'
+
+filesystem_directory_list:
+  - 'download'
+  - 'game'
+  - 'laptop'
+  - 'video'
+  - 'vms'
