delete unnecessary symlink to storage device

--- a/hosts.yml
+++ b/hosts.yml
@@ -7,7 +7,7 @@ local:
     helper_path: '{{ dotfiles_directory }}/service/helper'
     user_home: '{{ "$HOME" | expandvars }}'
     user_config: '{{ user_home }}/.config'
-    user_storage: '{{ user_home }}/storage'
+    user_storage: '/media/{{ ansible_user_id }}/storage'
     dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
     sync_directory: '{{ user_storage }}/sync'
@@ -15,4 +15,3 @@ local:
     git_protocol: 'git@github.com:in-in/dotfiles.git'
     storage_ext_id: '12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
     storage_ext: '{{ user_home }}/storage_ext'
-    chapter27: '/media/{{ ansible_user_id }}/chapter27'
