--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -1,11 +1,10 @@
 ---
-# https://code.visualstudio.com/docs/editor/extension-gallery#_command-line-extension-management
 - name: install users packages
   command:
     'code --install-extension {{ item }}'
   register: command_result
   changed_when: not command_result.stdout | regex_search("(is already installed)")
-  until: not command_result.stderr
+  until: command_result.failed is defined
   retries: 5
   delay: 10
   loop: '{{ vscode_extensions }}'
