--- a/service/utility/tasks/repository.yml
+++ b/service/utility/tasks/repository.yml
@@ -6,7 +6,7 @@
     repo: '{{ item.repo }}'
     filename: '{{ item.filename | default(omit) }}'
   register: apt_repository_result
-  until: apt_repository_result.failed == False
+  until: apt_repository_result.failed is defined
   retries: 5
   delay: 10
   loop: '{{ utility_repository_list | flatten }}'
