--- a/roles/vscode/files/Code/User/settings.json
+++ b/roles/vscode/files/Code/User/settings.json
@@ -26,6 +26,8 @@
   "extensions.autoUpdate": false,
   "extensions.ignoreRecommendations": true,
   "extensions.showRecommendationsOnlyOnDemand": true,
+  "markdown.preview.fontFamily": "Iosevka SS08, monospace",
+  "markdown.preview.fontSize": 16,
   "python.formatting.provider": "yapf",
   "python.pythonPath": "/usr/bin/python3",
   "telemetry.enableCrashReporter": false,
@@ -53,6 +55,7 @@
   "workbench.editor.showTabs": false,
   "workbench.enableExperiments": false,
   "workbench.iconTheme": "vscode-icons",
+  "workbench.settings.editor": "json",
   "workbench.sideBar.location": "right",
   "workbench.startupEditor": "none",
   "workbench.statusBar.feedback.visible": false,
