--- a/service/utility/tasks/package.yml
+++ b/service/utility/tasks/package.yml
@@ -11,7 +11,7 @@
     name: '{{ item.apt.install }}'
     state: latest
   register: apt_install_result
-  until: apt_install_result.failed is defined
+  until: apt_install_result.failed == false
   retries: 5
   delay: 10
   when:
@@ -42,7 +42,7 @@
     extra_args: '--user --upgrade'
     state: latest
   register: pip_install_result
-  until: pip_install_result.failed is defined
+  until: pip_install_result.failed == false
   retries: 5
   delay: 10
   when:
