--- a/roles/nemo/defaults/main.yml
+++ b/roles/nemo/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 utility_template:
-  - dest: '{{ user_config }}/gtk-3.0'
-    path: '{{ dotfiles_roles }}/nemo/templates'
+  - path: '{{ dotfiles_roles }}/nemo/templates'
+    dest: '{{ user_config }}/gtk-3.0'
     filename: 'bookmarks'
     data: 'nemo_bookmarks'
 
