--- a/roles/keepassxc/defaults/main.yml
+++ b/roles/keepassxc/defaults/main.yml
@@ -8,6 +8,6 @@ utility_package:
       - 'keepassxc'
 
 utility_template:
-  - dest: '{{ user_config }}/keepassxc'
-    path: '{{ dotfiles_roles }}/keepassxc/templates'
+  - path: '{{ dotfiles_roles }}/keepassxc/templates'
+    dest: '{{ user_config }}/keepassxc'
     filename: 'keepassxc.ini'
