--- a/roles/network_manager/defaults/main.yml
+++ b/roles/network_manager/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 utility_template:
-  - path: '{{ dotfiles_roles }}/network_manager/templates'
+  - privilege: true
+    path: '{{ dotfiles_roles }}/network_manager/templates'
     dest: '/etc/NetworkManager/system-connections'
     filename: 'Hotspot'
-    permission: true
