network_manager: fix non-unique hostname & add backup option to template task

--- a/roles/gnome_terminal/tasks/main.yml
+++ b/roles/gnome_terminal/tasks/main.yml
@@ -27,6 +27,8 @@
   template:
     src: 'terminal.sh.j2'
     dest: '{{ helper_tempfile_result.path }}/{{ item.0.name | replace(" ", "_") }}.sh'
+    lstrip_blocks: yes
+    backup: yes
   loop: '{{ zip_gnome_terminal }}'
 
 - name: configure terminal
