--- a/service/utility/tasks/startup.yml
+++ b/service/utility/tasks/startup.yml
@@ -13,4 +13,6 @@
   template:
     src: 'startup.j2'
     dest: '{{ utility_startup_dest }}/{{ item.name }}.desktop'
+    lstrip_blocks: yes
+    backup: yes
   loop: '{{ utility_startup_list | flatten }}'
