--- a/service/utility/tasks/gitignore.yml
+++ b/service/utility/tasks/gitignore.yml
@@ -8,6 +8,8 @@
   template:
     src: gitignore.j2
     dest: '{{ helper_tempfile_result.path }}/gitignore{{ index }}'
+    lstrip_blocks: yes
+    backup: yes
   loop: '{{ utility_gitignore_list | flatten }}'
   loop_control:
     index_var: index
