--- a/roles/gnome_terminal/tasks/main.yml
+++ b/roles/gnome_terminal/tasks/main.yml
@@ -24,11 +24,10 @@
       }}
 
 - name: create template
-  template:
-    src: 'terminal.sh.j2'
+  include_tasks: '{{ helper_template }}'
+  vars:
+    src: '{{ dotfiles_roles }}/gnome_terminal/templates/terminal.sh.j2'
     dest: '{{ helper_tempfile_result.path }}/{{ item.0.name | replace(" ", "_") }}.sh'
-    lstrip_blocks: yes
-    backup: yes
   loop: '{{ zip_gnome_terminal }}'
 
 - name: configure terminal
