gnome_terminal: delete unused themes & add light themes & change default theme

--- a/roles/gnome_terminal/vars/main.yml
+++ b/roles/gnome_terminal/vars/main.yml
@@ -21,27 +21,6 @@ gnome_terminal_themes:
     - '#7dd6cf'
     - '#f5f5f5'
 
-  - name: 'argonaut'
-    background_color: '#0e1019'
-    foreground_color: '#fffaf4'
-    colors:
-    - '#232323'
-    - '#ff000f'
-    - '#8ce10b'
-    - '#ffb900'
-    - '#008df8'
-    - '#6d43a6'
-    - '#00d8eb'
-    - '#ffffff'
-    - '#444444'
-    - '#ff2740'
-    - '#abe15b'
-    - '#ffd242'
-    - '#0092ff'
-    - '#9a5feb'
-    - '#67fff0'
-    - '#ffffff'
-
   - name: 'cai'
     background_color: '#09111a'
     foreground_color: '#d9e6f2'
@@ -61,48 +40,6 @@ gnome_terminal_themes:
     - '#8da3e9'
     - '#d48de9'
     - '#8de9d4'
-    - '#ffffff'
-
-  - name: 'ciapre'
-    background_color: '#191c27'
-    foreground_color: '#aea47a'
-    colors:
-    - '#181818'
-    - '#810009'
-    - '#48513b'
-    - '#cc8b3f'
-    - '#576d8c'
-    - '#724d7c'
-    - '#5c4f4b'
-    - '#aea47f'
-    - '#555555'
-    - '#ac3835'
-    - '#a6a75d'
-    - '#dcdf7c'
-    - '#3097c6'
-    - '#d33061'
-    - '#f3dbb2'
-    - '#f4f4f4'
-
-  - name: 'dracula'
-    background_color: '#282a36'
-    foreground_color: '#94a3a5'
-    colors:
-    - '#44475a'
-    - '#ff5555'
-    - '#50fa7b'
-    - '#ffb86c'
-    - '#8be9fd'
-    - '#bd93f9'
-    - '#ff79c6'
-    - '#94a3a5'
-    - '#000000'
-    - '#ff5555'
-    - '#50fa7b'
-    - '#ffb86c'
-    - '#8be9fd'
-    - '#bd93f9'
-    - '#ff79c6'
     - '#ffffff'
 
   - name: 'earthsong'
@@ -126,68 +63,26 @@ gnome_terminal_themes:
     - '#84f088'
     - '#f6f7ec'
 
-  - name: 'fishtank'
-    background_color: '#232537'
-    foreground_color: '#ecf0fe'
+  - name: 'gruvbox'
+    background_color: '#fbf1c7'
+    foreground_color: '#3c3836'
     colors:
-    - '#03073c'
-    - '#c6004a'
-    - '#acf157'
-    - '#fecd5e'
-    - '#525fb8'
-    - '#986f82'
-    - '#968763'
-    - '#ecf0fc'
-    - '#6c5b30'
-    - '#da4b8a'
-    - '#dbffa9'
-    - '#fee6a9'
-    - '#b2befa'
-    - '#fda5cd'
-    - '#a5bd86'
-    - '#f6ffec'
-
-  - name: 'flat'
-    background_color: '#1f2d3a'
-    foreground_color: '#1abc9c'
-    colors:
-    - '#2c3e50'
-    - '#c0392b'
-    - '#27ae60'
-    - '#f39c12'
-    - '#2980b9'
-    - '#8e44ad'
-    - '#16a085'
-    - '#bdc3c7'
-    - '#34495e'
-    - '#e74c3c'
-    - '#2ecc71'
-    - '#f1c40f'
-    - '#3498db'
-    - '#9b59b6'
-    - '#2aa198'
-    - '#ecf0f1'
-
-  - name: 'foxnightly'
-    background_color: '#2a2a2e'
-    foreground_color: '#d7d7db'
-    colors:
-    - '#2a2a2e'
-    - '#b98eff'
-    - '#ff7de9'
-    - '#729fcf'
-    - '#66a05b'
-    - '#75507b'
-    - '#acacae'
-    - '#ffffff'
-    - '#a40000'
-    - '#bf4040'
-    - '#66a05b'
-    - '#ffb86c'
-    - '#729fcf'
-    - '#8f5902'
-    - '#c4a000'
-    - '#5c3566'
+    - '#fbf1c7'
+    - '#cc241d'
+    - '#98971a'
+    - '#d79921'
+    - '#458588'
+    - '#b16286'
+    - '#689d6a'
+    - '#7c6f64'
+    - '#928374'
+    - '#9d0006'
+    - '#79740e'
+    - '#b57614'
+    - '#076678'
+    - '#8f3f71'
+    - '#427b58'
+    - '#3c3836'
 
   - name: 'gruvbox dark'
     background_color: '#282828'
@@ -210,68 +105,68 @@ gnome_terminal_themes:
     - '#8ec07c'
     - '#ebdbb2'
 
-  - name: 'kibble'
-    background_color: '#0e100a'
-    foreground_color: '#f7f7f7'
+  - name: 'man page'
+    background_color: '#fef49c'
+    foreground_color: '#000000'
     colors:
-    - '#4d4d4d'
-    - '#c70031'
-    - '#29cf13'
-    - '#d8e30e'
-    - '#3449d1'
-    - '#8400ff'
-    - '#0798ab'
-    - '#e2d1e3'
-    - '#5a5a5a'
-    - '#f01578'
-    - '#6ce05c'
-    - '#f3f79e'
-    - '#97a4f7'
-    - '#c495f0'
-    - '#68f2e0'
+    - '#000000'
+    - '#cc0000'
+    - '#00a600'
+    - '#999900'
+    - '#0000b2'
+    - '#b200b2'
+    - '#00a6b2'
+    - '#cccccc'
+    - '#666666'
+    - '#e50000'
+    - '#00d900'
+    - '#e5e500'
+    - '#0000ff'
+    - '#e500e5'
+    - '#00e5e5'
+    - '#e5e5e5'
+
+  - name: 'molokai'
+    background_color: '#1b1d1e'
+    foreground_color: '#bbbbbb'
+    colors:
+    - '#1b1d1e'
+    - '#7325fa'
+    - '#23e298'
+    - '#60d4df'
+    - '#d08010'
+    - '#ff0087'
+    - '#d0a843'
+    - '#bbbbbb'
+    - '#555555'
+    - '#9d66f6'
+    - '#5fe0b1'
+    - '#6df2ff'
+    - '#ffaf00'
+    - '#ff87af'
+    - '#ffce51'
     - '#ffffff'
 
-  - name: 'mona lisa'
-    background_color: '#120b0d'
-    foreground_color: '#f7d66a'
+  - name: 'novel'
+    background_color: '#dfdbc3'
+    foreground_color: '#3b2322'
     colors:
-    - '#351b0e'
-    - '#9b291c'
-    - '#636232'
-    - '#c36e28'
-    - '#515c5d'
-    - '#9b1d29'
-    - '#588056'
-    - '#f7d75c'
-    - '#874228'
-    - '#ff4331'
-    - '#b4b264'
-    - '#ff9566'
-    - '#9eb2b4'
-    - '#ff5b6a'
-    - '#8acd8f'
-    - '#ffe598'
-
-  - name: 'monokai soda'
-    background_color: '#1a1a1a'
-    foreground_color: '#c4c5b5'
-    colors:
-    - '#1a1a1a'
-    - '#f4005f'
-    - '#98e024'
-    - '#fa8419'
-    - '#9d65ff'
-    - '#f4005f'
-    - '#58d1eb'
-    - '#c4c5b5'
-    - '#625e4c'
-    - '#f4005f'
-    - '#98e024'
-    - '#e0d561'
-    - '#9d65ff'
-    - '#f4005f'
-    - '#58d1eb'
-    - '#f6f6ef'
+    - '#000000'
+    - '#cc0000'
+    - '#009600'
+    - '#d06b00'
+    - '#0000cc'
+    - '#cc00cc'
+    - '#0087cc'
+    - '#cccccc'
+    - '#808080'
+    - '#cc0000'
+    - '#009600'
+    - '#d06b00'
+    - '#0000cc'
+    - '#cc00cc'
+    - '#0087cc'
+    - '#ffffff'
 
   - name: 'oceanic next'
     background_color: '#121b21'
@@ -293,27 +188,6 @@ gnome_terminal_themes:
     - '#b77eb8'
     - '#50a5a4'
     - '#ffffff'
-
-  - name: 'pencil dark'
-    background_color: '#212121'
-    foreground_color: '#f1f1f1'
-    colors:
-    - '#212121'
-    - '#c30771'
-    - '#10a778'
-    - '#a89c14'
-    - '#008ec4'
-    - '#523c79'
-    - '#20a5ba'
-    - '#d9d9d9'
-    - '#424242'
-    - '#fb007a'
-    - '#5fd7af'
-    - '#f3e430'
-    - '#20bbfc'
-    - '#6855de'
-    - '#4fb8cc'
-    - '#f1f1f1'
 
   - name: 'sea shells'
     background_color: '#09141b'
@@ -356,111 +230,6 @@ gnome_terminal_themes:
     - '#e24d8e'
     - '#00b39e'
     - '#fcf4dc'
-
-  - name: 'spacedust'
-    background_color: '#0a1e24'
-    foreground_color: '#ecf0c1'
-    colors:
-    - '#6e5346'
-    - '#e35b00'
-    - '#5cab96'
-    - '#e3cd7b'
-    - '#0f548b'
-    - '#e35b00'
-    - '#06afc7'
-    - '#f0f1ce'
-    - '#684c31'
-    - '#ff8a3a'
-    - '#aecab8'
-    - '#ffc878'
-    - '#67a0ce'
-    - '#ff8a3a'
-    - '#83a7b4'
-    - '#fefff1'
-
-  - name: 'sundried'
-    background_color: '#1a1818'
-    foreground_color: '#c9c9c9'
-    colors:
-    - '#302b2a'
-    - '#a7463d'
-    - '#587744'
-    - '#9d602a'
-    - '#485b98'
-    - '#864651'
-    - '#9c814f'
-    - '#c9c9c9'
-    - '#4d4e48'
-    - '#aa000c'
-    - '#128c21'
-    - '#fc6a21'
-    - '#7999f7'
-    - '#fd8aa1'
-    - '#fad484'
-    - '#ffffff'
-
-  - name: 'terminix dark'
-    background_color: '#091116'
-    foreground_color: '#868a8c'
-    colors:
-    - '#282a2e'
-    - '#a54242'
-    - '#a1b56c'
-    - '#de935f'
-    - '#225555'
-    - '#85678f'
-    - '#5e8d87'
-    - '#777777'
-    - '#373b41'
-    - '#c63535'
-    - '#608360'
-    - '#fa805a'
-    - '#449da1'
-    - '#ba8baf'
-    - '#86c1b9'
-    - '#c5c8c6'
-
-  - name: 'tin'
-    background_color: '#2e2e35'
-    foreground_color: '#ffffff'
-    colors:
-    - '#000000'
-    - '#8d534e'
-    - '#4e8d53'
-    - '#888d4e'
-    - '#534e8d'
-    - '#8d4e88'
-    - '#4e888d'
-    - '#ffffff'
-    - '#000000'
-    - '#b57d78'
-    - '#78b57d'
-    - '#b0b578'
-    - '#7d78b5'
-    - '#b578b0'
-    - '#78b0b5'
-    - '#ffffff'
-
-  - name: 'vag'
-    background_color: '#191f1d'
-    foreground_color: '#d9e6f2'
-    colors:
-    - '#303030'
-    - '#a87139'
-    - '#39a871'
-    - '#71a839'
-    - '#7139a8'
-    - '#a83971'
-    - '#3971a8'
-    - '#8a8a8a'
-    - '#494949'
-    - '#b0763b'
-    - '#3bb076'
-    - '#76b03b'
-    - '#763bb0'
-    - '#b03b76'
-    - '#3b76b0'
-    - '#cfcfcf'
 
   - name: 'wild cherry'
     background_color: '#1f1726'
