--- a/roles/tor_browser/defaults/main.yml
+++ b/roles/tor_browser/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
-tor_browser_version: '7.5.6'
-tor_browser_lang: 'en-US'
+utility_package:
+  apt:
+    install_recommends: no
+    install:
+      - 'torbrowser-launcher'
