--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
 
+callback_whitelist = profile_roles, profile_tasks, timer
 inventory = ./hosts.yml
 log_path = ~/Desktop/ansible.log
 nocows = 1
 roles_path = ./service
-stdout_callback = debug
+stdout_callback = yaml
