calibre: add a retrying loop for a network task & chromium: update settings

--- a/roles/calibre/tasks/main.yml
+++ b/roles/calibre/tasks/main.yml
@@ -10,6 +10,10 @@
   get_url:
     url: '{{ calibre_installer }}'
     dest: '{{ helper_tempfile_result.path }}'
+  register: get_url_result
+  until: get_url_result.msg is match('OK*')
+  retries: 5
+  delay: 10
 
 - name: install
   become: yes
