--- a/roles/optimization/defaults/main.yml
+++ b/roles/optimization/defaults/main.yml
@@ -8,6 +8,7 @@ utility_copy:
       dest: '/usr/share/X11/xorg.conf.d/'
 
 optimization_autostart_entry_list:
+  - 'cinnamon-settings-daemon-wacom.desktop'
   - 'nvidia-prime.desktop'
   - 'orca-autostart.desktop'
   - 'org.gnome.SettingsDaemon.Wacom.desktop'
