--- a/roles/audacity/defaults/main.yml
+++ b/roles/audacity/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
+utility_repository:
+  - repo: 'ppa:ubuntuhandbook1/audacity'
+
 utility_package:
   apt:
-    install_recommends: no
     install:
       - 'audacity'
 
