add podcast dir

--- a/roles/nemo/defaults/main.yml
+++ b/roles/nemo/defaults/main.yml
@@ -11,6 +11,7 @@ nemo_bookmarks:
   - '{{ user_storage }}/dev'
   - '{{ user_storage }}/download'
   - '{{ user_storage }}/laptop'
+  - '{{ user_storage }}/podcast'
   - '{{ user_storage }}/sync'
   - '{{ user_storage }}/video'
   - '{{ storage_ext }}'
